GNOME Bugzilla – Bug 789804
Export Certificate fails
Last modified: 2019-02-22 11:57:48 UTC
Selecting "Export Certificate" from the View Certificate dialog displays an open file dialog then freezes.
OK, this one's almost surely GNOME's fault. ;) I honestly can't find the Export Certificate button, though. Can you post a screenshot? Also please figure out what version of gcr you have installed on your system.
:-) Click the lock icon in the location field, click the View Certificate button, right click the certificate. gcr 3.20.0-5.1ubuntu1 Epiphany returns an error for sites that don't have a certificate on file (eg https://oo.net). This seems to be the only way to save a certificate in Epiphany.
(In reply to Technical Support from comment #2) > :-) > > Click the lock icon in the location field, click the View Certificate > button, right click the certificate. OK, I can reproduce.
The following fix has been pushed: aabe746 ui: Fix certificate export dialog to not hang the application
Created attachment 362950 [details] [review] ui: Fix certificate export dialog to not hang the application I don't know why -- I guess something must have changed in GTK+ -- but currently the certificate export dialog does nothing except hang. It can't receive any user input or anything. gtk_dialog_run() seems to fix this, so let's use it. Note we have to adjust the refcounting here now, since if the Cancel button is pressed the operation will complete before _gcr_certificate_exporter_export_async returns. The function is still partially async, but it now blocks until the dialog is closed.
Note: gcr is unmaintained, so this fix will probably not get released for a long time. But it's fixed in master now.
It's nice when everything works :-) In the meantime, it's not hard to script a workaround using openssl.