ui: Fix certificate export dialog to not hang the application

I don't know why -- I guess something must have changed in GTK+ -- but
currently the certificate export dialog does nothing except hang. It
can't receive any user input or anything.

gtk_dialog_run() seems to fix this, so let's use it.

Note we have to adjust the refcounting here now, since if the Cancel
button is pressed the operation will complete before
_gcr_certificate_exporter_export_async returns. The function is still
partially async, but it now blocks until the dialog is closed.

https://bugzilla.gnome.org/show_bug.cgi?id=789804